# SPDX-FileCopyrightText: 2022 The Ikarus Developers mueller@ibb.uni-stuttgart.de
# SPDX-License-Identifier: LGPL-2.1-or-later

# install headers

# add_subdirectory(utils)
add_subdirectory(assembler)
add_subdirectory(controlRoutines)
add_subdirectory(finiteElements)
add_subdirectory(linearAlgebra)
add_subdirectory(solver)
add_subdirectory(utils)
